Implementación del R2, mejoras visuales en las vistas principales, correción del formato permitido excel en el admin
